--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.7.0",
+    "firebaseui": "^3.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-facebook-login": "^4.1.1",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
