--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.6.3",
     "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^3.1.2",
+    "react-geolocated": "^2.4.0",
     "react-geolocation": "^1.0.4",
     "react-google-location": "^1.2.2",
     "react-google-maps": "^9.4.5",
