--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-google-location": "^1.2.2",
     "react-google-maps": "^9.4.5",
     "react-map-gl": "^4.0.5",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
