--- a/package.json
+++ b/package.json
@@ -5,19 +5,12 @@
   "dependencies": {
     "firebase": "^5.7.0",
     "firebaseui": "^3.4.1",
-    "google-distance-matrix": "^1.1.1",
-    "google-maps-react": "^2.0.2",
-    "mapbox-gl": "^0.52.0-beta.1",
+    "google-map-react": "^1.1.2",
     "react": "^16.6.3",
     "react-dictate-button": "^1.1.3",
     "react-dom": "^16.6.3",
-    "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^3.1.2",
     "react-geolocated": "^2.4.0",
-    "react-geolocation": "^1.0.4",
-    "react-google-location": "^1.2.2",
-    "react-google-maps": "^9.4.5",
-    "react-map-gl": "^4.0.5",
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
